--- a/RecipeApplication.Managers/RecipeApplication.Managers.csproj
+++ b/RecipeApplication.Managers/RecipeApplication.Managers.csproj
@@ -1,12 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RecipeApplication.Database\RecipeApplication.Database.csproj" />
-    <ProjectReference Include="..\RecipeApplication\Server\RecipeApplication.Server.csproj" />
   </ItemGroup>
 
 </Project>
