Backend logic fixed. Now I need to work on front-end.

--- a/RecipeApplication.Managers/RecipeApplication.Managers.csproj
+++ b/RecipeApplication.Managers/RecipeApplication.Managers.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RecipeApplication.Database\RecipeApplication.Database.csproj" />
+    <ProjectReference Include="..\RecipeApplication.Models\RecipeApplication.Models.csproj" />
   </ItemGroup>
 
 </Project>
