--- a/RecipeApplication/Server/RecipeApplication.Server.csproj
+++ b/RecipeApplication/Server/RecipeApplication.Server.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\RecipeApplication.Database\RecipeApplication.Database.csproj" />
     <ProjectReference Include="..\..\RecipeApplication.Managers\RecipeApplication.Managers.csproj" />
+    <ProjectReference Include="..\..\RecipeApplication.Models\RecipeApplication.Models.csproj" />
     <ProjectReference Include="..\Client\RecipeApplication.Client.csproj" />
   </ItemGroup>
 
